--- a/src/app/views/brands/managepremiumbrands/managepremiumbrands-table-popup/managepremiumbrands-table-popup.html
+++ b/src/app/views/brands/managepremiumbrands/managepremiumbrands-table-popup/managepremiumbrands-table-popup.html
@@ -1,6 +1,6 @@
 <h1 matDialogTitle>{{data.title}}</h1>
 
-  <form [formGroup]="itemForm" (ngSubmit)="submit($event)">
+  <form [formGroup]="itemForm" (ngSubmit)="submit()">
   <div fxLayout="row wrap" fxLayout.lt-sm="column">
 
     <div fxFlex="100"  class="pr-1" >
@@ -8,8 +8,8 @@
       <div class="form-group">
           <input type="file" name="image"  style="display: none;" accept="image/*" #logo  (change)="fileProgress1($event)" />
       </div>
-      <div *ngIf="fileUploadProgress1">
-          Upload progress: {{ fileUploadProgress1 }}
+      <div *ngIf="fileUploadProgress">
+          Upload progress: {{ fileUploadProgress}}
       </div>
       <div class="image-preview mb-3" *ngIf="previewUrlLogo">
           <img [src]="previewUrlLogo" height="100" />                 
