--- a/src/app/views/pages/availability/availabilitypopup/availabilitypopup.component.html
+++ b/src/app/views/pages/availability/availabilitypopup/availabilitypopup.component.html
@@ -2,7 +2,7 @@
 0;position:absoloute;cursor: pointer;">cancel</mat-icon>
 <h1 matDialogTitle>{{ data.title }}</h1>
 
-<form [formGroup]="itemForm" (ngSubmit)="submit($event)">
+<form [formGroup]="itemForm" (ngSubmit)="submit()">
   <div fxLayout="row wrap" fxLayout.lt-sm="column">
    
     <div>
