--- a/src/app/views/pages/managebanner/bannerpopup/bannerpopup.component.html
+++ b/src/app/views/pages/managebanner/bannerpopup/bannerpopup.component.html
@@ -2,7 +2,7 @@
 0;position:absoloute;cursor: pointer;">cancel</mat-icon>
 <h1 matDialogTitle>{{data.title}}</h1>
 
-  <form [formGroup]="itemForm" (ngSubmit)="submit($event)">
+  <form [formGroup]="itemForm" (ngSubmit)="submit()">
   <div fxLayout="row wrap" fxLayout.lt-sm="column">
     
 
@@ -12,8 +12,8 @@
                 <div class="form-group">
                     <input type="file" name="image"  style="display: none;" accept="image/*" #logo  (change)="fileProgress1($event)" />
                 </div>
-                <div *ngIf="fileUploadProgress1">
-                    Upload progress: {{ fileUploadProgress1 }}
+                <div *ngIf="fileUploadProgress">
+                    Upload progress: {{ fileUploadProgress }}
                 </div>
                 <div class="image-preview mb-3" *ngIf="previewUrlLogo">
                     <img [src]="previewUrlLogo" height="100" />                 
