--- a/src/app/views/pages/topheader/topheader.component.html
+++ b/src/app/views/pages/topheader/topheader.component.html
@@ -2,7 +2,7 @@
   <mat-tab-group>
     <mat-tab label="Top Header Settings">
       <mat-card-content class="mt-1">
-          <form [formGroup]="itemForm" (ngSubmit)="submit($event)">
+          <form [formGroup]="itemForm" (ngSubmit)="submit()">
       
               <input
               matInput
