--- a/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
+++ b/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
@@ -2,7 +2,7 @@
 0;position:absoloute;cursor: pointer;">cancel</mat-icon>
 <h1 matDialogTitle>{{ data.title }}</h1>
 
-<form [formGroup]="itemForm" (ngSubmit)="submit($event)">
+<form [formGroup]="itemForm" (ngSubmit)="submit()">
   <div fxLayout="row wrap" fxLayout.lt-sm="column">
     <div fxFlex="50" class="pr-1">
       <mat-form-field class="full-width">
@@ -111,8 +111,8 @@
           (change)="fileProgress1($event)"
         />
       </div>
-      <div *ngIf="fileUploadProgress1">
-        Upload progress: {{ fileUploadProgress1 }}
+      <div *ngIf="fileUploadProgress">
+        Upload progress: {{ fileUploadProgress }}
       </div>
       <div class="image-preview mb-3" *ngIf="previewUrlLogo">
         <img [src]="previewUrlLogo" height="100" />
