--- a/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
+++ b/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
@@ -65,7 +65,7 @@
     <div fxFlex="50" class="pr-1">
       <mat-form-field [style.width.px]=227>
         <mat-label>Parent Category</mat-label>
-        <mat-select [formControl]="itemForm.controls['parentcategory']" (selectionChange)="getSubCategories($event.value)">
+        <mat-select [formControl]="itemForm.controls['parentcategory']" multiple (selectionChange)="getSubCategories($event.value)">
           <mat-option
             *ngFor="let topping of parentCategory"
             [value]="topping"
@@ -77,7 +77,7 @@
     <div fxFlex="50" class="pr-1">
       <mat-form-field [style.width.px]=227>
         <mat-label>Sub Category</mat-label>
-        <mat-select [formControl]="itemForm.controls['subcategory']">
+        <mat-select multiple [formControl]="itemForm.controls['subcategory']">
           <mat-option
             *ngFor="let topping of subcategories"
             [value]="topping"
