--- a/src/app/views/users/manageusers/manageusers.component.html
+++ b/src/app/views/users/manageusers/manageusers.component.html
@@ -36,7 +36,7 @@
               {{ row?.role }}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Keywords" [flexGrow]="1">
+          <ngx-datatable-column name="Email" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
               {{ row?.email }}
             </ng-template>
